# wow-is-dead-3

./: .gitignore  2025-11-16-i-dont-want-to-use-the-default-modrinth-launcher-f.txt  ANALYSIS_SUMMARY.md  API_QUICK_REFERENCE.md  API_SPECIFICATION.md  AUDIO_SYSTEM_ANALYSIS.md  AUDIO_SYSTEM_FIX_GUIDE.md  AUDIO_SYSTEM_SUMMARY.md  BLUEMAP_INTEGRATION.md  BLUEMAP_INTEGRATION_RESEARCH.md  BLUEMAP_PLAYER_FIX.md  BLUEMAP_QUICK_REFERENCE.md  BLUEMAP_RESEARCH_SUMMARY.txt  CHANGELOG.md  CLAUDE.md  CODE_REFERENCE.md  CUSTOMIZATION_GUIDE.md  ERROR_HANDLING_ANALYSIS.md  FINAL_INTEGRATION_SUMMARY.md  INTEGRATION_COMPLETION_REPORT.md  INTEGRATION_INVENTORY.md  LAUNCHER_UPDATE_FIX.md  LAUNCHER_UPDATE_IMPLEMENTATION.md  MODAL_FIX_SUMMARY.md  MODPACK_UPDATE_ANALYSIS.md  PACKETFIXER_COMPATIBILITY.md  README.md  README_BLUEMAP_RESEARCH.md  UPDATE_FLOW_VISUAL.txt  WARP.md  codel.sh
wowid3-launcher/src-tauri/: Cargo.toml  tauri.conf.json  wowid3-launcher.sh
wowid3-launcher/src-tauri/.cargo/: config.toml
wowid3-launcher/src-tauri/capabilities/: default.json
wowid3-launcher/src-tauri/game/config/: create-server.toml  dummmmmmy-client.json  enhanced_bes.properties  everycomp-entries.json  farmersdelight-common.toml  iris.properties  item-descriptions.json  liukrast3dskins.json  packetfixer.properties  sereneseasonsplus.json  sodium-fingerprint.json  vinery.json
wowid3-launcher/src-tauri/game/config/biomesoplenty/: biome_toggles.json
wowid3-launcher/src-tauri/game/config/biomespawnpoint/: spawnbiomes.txt
wowid3-launcher/src-tauri/game/config/essential-mod-partner/: data.cache.json
wowid3-launcher/src-tauri/game/config/sereneseasons/: seasons.toml
wowid3-launcher/src-tauri/game/config/urlmusicdiscs/: urlmusicdiscs.json
wowid3-launcher/src-tauri/game/config/urlmusicdiscs/ffmpeg/: ffmpeg
wowid3-launcher/src-tauri/game/datapacks/wowid3_progression/: pack.mcmeta
wowid3-launcher/src-tauri/game/datapacks/wowid3_progression/data/minecraft/advancements/wowid3/convergence/: 01_farming_industry.json  02_industry_explorer.json  03_farming_explorer.json  04_triple_convergence.json
wowid3-launcher/src-tauri/game/datapacks/wowid3_progression/data/minecraft/advancements/wowid3/explorer_path/: 01_explorer_started.json  02_biome_explorer.json  03_lets_do_stations.json  04_wine_mastery.json  05_building_blocks_mastery.json
wowid3-launcher/src-tauri/game/datapacks/wowid3_progression/data/minecraft/advancements/wowid3/farming_path/: 01_farming_started.json  02_cutting_board_recipes.json  03_cooking_pot.json  04_rich_soil.json  05_farmer_delight_mastery.json
wowid3-launcher/src-tauri/game/datapacks/wowid3_progression/data/minecraft/advancements/wowid3/industry_path/: 01_industry_started.json  02_hand_crank_power.json  03_water_wheel.json  04_stress_mastery.json  05_create_ecosystem_mastery.json
wowid3-launcher/src-tauri/game/datapacks/wowid3_progression/data/minecraft/advancements/wowid3/integration/: 01_steam_power.json  02_spell_system.json  03_artifact_crafting.json  04_electrical_grid.json  05_endgame_mastery.json
wowid3-launcher/src-tauri/game/datapacks/wowid3_skills/: pack.mcmeta
wowid3-launcher/src-tauri/game/datapacks/wowid3_skills/data/wowid3_skills/puffish_skills/categories/automation_engineer/: category.json  connections.json  definitions.json  experience.json  skills.json
wowid3-launcher/src-tauri/game/datapacks/wowid3_skills/data/wowid3_skills/puffish_skills/categories/explorer/: category.json  connections.json  definitions.json  experience.json  skills.json
wowid3-launcher/src-tauri/game/datapacks/wowid3_skills/data/wowid3_skills/puffish_skills/categories/generalist/: category.json  connections.json  definitions.json  experience.json  skills.json
wowid3-launcher/src-tauri/game/kubejs/client_scripts/: tooltips.js
wowid3-launcher/src-tauri/game/kubejs/config/: client.properties  common.properties
wowid3-launcher/src-tauri/game/kubejs/server_scripts/: advancement_rewards.js
wowid3-launcher/src-tauri/game/kubejs/server_scripts/recipes/: create_tiers.js  farmersdelight_tiers.js
wowid3-launcher/src-tauri/game/kubejs/startup_scripts/: custom_items.js
wowid3-launcher/src-tauri/icons/: icon.icns
wowid3-launcher/src-tauri/src/: lib.rs  main.rs
wowid3-launcher/src-tauri/src/modules/: asset_manager.rs  audio.rs  auth.rs  avatar_proxy.rs  cms_config.rs  discord.rs  download_manager.rs  encrypted_storage.rs  fabric_installer.rs  game_installer.rs  java_runtime.rs  launcher_updater.rs  library_manager.rs  log_reader.rs  logger.rs  map_viewer.rs  minecraft.rs  minecraft_version.rs  mod.rs  network_test.rs  paths.rs  server.rs  stats.rs  updater.rs  vpn.rs
wowid3-server/server/: .env.example  Cargo.toml
wowid3-server/server/migrations/: 002_add_vpn_peers.sql
wowid3-server/server/src/: cli.rs  config.rs  main.rs  tcp_test_server.rs  utils.rs
wowid3-server/server/src/api/: admin.rs  bluemap.rs  cms.rs  drafts.rs  logs.rs  mod.rs  public.rs  server.rs  stats.rs  tracker.rs
wowid3-server/server/src/cache/: mod.rs
wowid3-server/server/src/database/: mod.rs  stats.rs
wowid3-server/server/src/middleware/: auth.rs  mod.rs
wowid3-server/server/src/models/: admin.rs  cms.rs  manifest.rs  mod.rs  release.rs  server.rs  stats.rs  tracker.rs
wowid3-server/server/src/modules/: config.rs  mod.rs  process.rs  server_manager.rs
wowid3-server/server/src/services/: analyzer.rs  changelog.rs  mod.rs  stats_processor.rs
wowid3-server/server/src/storage/: cms.rs  drafts.rs  files.rs  launcher.rs  manifest.rs  mod.rs
wowid3-server/server/src/utils/: mod.rs  platform.rs
wowid3-server/server/src/vpn/: api.rs  manager.rs  mod.rs  monitor.rs  provisioner.rs
(+357 files in other folders)
