[package]
name = "wowid3-launcher"
version = "0.1.0"
description = "WOWID3 Custom Minecraft Launcher - Christmas Edition"
authors = ["James Kueller"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "wowid3_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
oauth2 = "4"
keyring = "3"
discord-rich-presence = "0.2"
sha2 = "0.10"
sha1 = "0.10"
zip = "2"
anyhow = "1"
thiserror = "2"
sysinfo = "0.33"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
futures-util = "0.3"
url = "2"
open = "5"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
tokio-test = "0.4"

