[package]
name = "wowid3-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
uuid = { version = "1", features = ["v4", "serde"] }
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.33"
futures = "0.3"
tokio-stream = "0.1"

