[package]
name = "wowid3-modpack-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
http = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# File handling
sha2 = "0.10"
glob = "0.3"
globset = "0.4"
walkdir = "2"
mime_guess = "2"

# Multipart uploads
multer = "3"

# Environment & config
dotenvy = "0.15"
envy = "0.4"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }

# JAR file reading
zip = "0.6"

# Version extraction and pattern matching
regex = "1"
semver = "1"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Temporary file operations
tempfile = "3"

# LRU cache
lru = "0.12"

# Async utilities
async-trait = "0.1"

# Retry logic
backoff = { version = "0.4", features = ["tokio"] }
rusqlite = "0.37.0"
tokio-rusqlite = "0.7.0"

# Network testing
socket2 = "0.5"
rand = "0.8"
